--- a/styles/exploreMode.css
+++ b/styles/exploreMode.css
@@ -1,10 +1,17 @@
-.smut-provider {
+#erine-explore-mode {
+  display: none;
+  grid-template-columns: 300px 1fr;
+  grid-template-rows: 1fr 200px;
+  height: 100%;
+}
+
+.erine-smut-provider {
   grid-column: 2;
   grid-row: 1;
   background-color: rgba(255, 255, 255, 0.8);
 }
 
-.game-navigation {
+.erine-game-navigation {
   grid-column: 2;
   grid-row: 2;
   background-color: rgba(233, 245, 125, 0.8);
@@ -31,11 +38,4 @@
   width: 100%;
   text-align: center;
   font-size: 30px;
-}
-
-.explore-screen {
-  display: grid;
-  grid-template-columns: 300px 1fr;
-  grid-template-rows: 1fr 200px;
-  height: auto;
 }
