Added initial start screen JS. save/load modal window. Class now loads dynamically.

--- a/styles/erine.css
+++ b/styles/erine.css
@@ -1,6 +1,6 @@
 @import url("topNavigation.css");
 @import url("exploreMode.css");
-@import url("saveScreen.css");
+@import url("saveModal.css");
 @import url("vnMode.css");
 @import url("startMenu.css");
 
